@@ -1,3 +1,14 @@
+Tue Jun 29 19:39:59 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* test/win32ole/test_win32ole_method.rb (is_ruby64): check
+	  ruby binary is mswin64 or mingw64. [ruby-dev:41756]
+
+Mon Jun 28 20:32:33 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>
+
+	* test/win32ole/test_win32ole_method.rb (test_offset_vtbl): check
+	  that Ruby is 32bit or 64bit binary in order to get correct offset
+	  value. [ruby-dev:41741]
+
 Mon Jun 28 21:56:14 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* thread.c (rb_fd_resize, rb_fd_copy): avoid NULL dereference upon
